--- a/src/chatbot/interface/web/templates/base.html
+++ b/src/chatbot/interface/web/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <title>{% block title %}Portfolio{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="{% static 'chatbot/tailwind.css' %}" />
+        <link rel="stylesheet" href="{% static 'chatbot/tailwind.css' %}?v=1" />
         {% block head %}{% endblock %}
     </head>
     <body class="bg-slate-950 text-slate-100">
