--- a/src/chatbot/interface/web/templates/chatbot/chat.html
+++ b/src/chatbot/interface/web/templates/chatbot/chat.html
@@ -95,6 +95,9 @@
             <span id="send-label">Send</span>
         </button>
     </form>
+    <div id="loading-indicator" class="text-xs text-slate-400" hidden>
+        Thinking…
+    </div>
 </main>
 
 {% endblock %} {% block scripts %}
